feat: new structure for evaluate
